--- a/TestableCalculator/Solved/Tests/Tests.csproj
+++ b/TestableCalculator/Solved/Tests/Tests.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator\Calculator.csproj" />
+  </ItemGroup>
+
 </Project>
