--- a/csharp_bad/tests/tests.csproj
+++ b/csharp_bad/tests/tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+ <PackageReference Include="FluentAssertions" Version="5.7.0" />
  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
