--- a/DebuggingTipsAndTrics/DebuggingTipsAndTricks/DebuggingTipsAndTricks.csproj
+++ b/DebuggingTipsAndTrics/DebuggingTipsAndTricks/DebuggingTipsAndTricks.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.5" />
+    <PackageReference Include="log4net" Version="2.0.14" />
   </ItemGroup>
 
 </Project>
