--- a/DebuggingTipsAndTrics/DebugWeb/DebugWeb.csproj
+++ b/DebuggingTipsAndTrics/DebugWeb/DebugWeb.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+	<Target Name="VariablesEcho" BeforeTargets="publish">
+        <Message Text="Variable MSBuildBinPath: $(MSBuildBinPath)" Importance="High"/>
+        <Message Text="Variable VSToolsPath: $(VSToolsPath)" Importance="High"/>
+        <Message Text="Variable MSBuildExtensionsPath32: $(MSBuildExtensionsPath32)" Importance="High"/>
+	</Target>
 
 </Project>
