--- a/TypeScript5_News/package.json
+++ b/TypeScript5_News/package.json
@@ -15,6 +15,6 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-jasmine": "^5.1.0",
     "karma-typescript": "^5.5.3",
-    "typescript": "^5.0.0-beta"
+    "typescript": "^5.0.1-rc"
   }
 }
