Added typescript 5 enums examples

--- a/TypeScript5_News/package.json
+++ b/TypeScript5_News/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "build": "tsc"
   },
   "author": "",
   "license": "MIT",
