--- a/TypeScript5_News/tsconfig.json
+++ b/TypeScript5_News/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "commonjs",                                /* Specify what module code is generated. */
-     "types": [ "jasmine" ],                                      /* Specify type package names to be included without being referenced in a source file. */
+    "target": "es2017",                               /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "CommonJS",                             /* Specify what module code is generated. */
+     "types": [ "jasmine" ],                          /* Specify type package names to be included without being referenced in a source file. */
     "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
-    "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-    "strict": true,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "outDir": "./dist",                               /* Specify an output folder for all emitted files. */
+    "esModuleInterop": true,                          /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "forceConsistentCasingInFileNames": true,         /* Ensure that casing is correct in imports. */
+    "strict": true,                                   /* Enable all strict type-checking options. */
+    "skipLibCheck": true,                             /* Skip type checking all .d.ts files. */
+    "experimentalDecorators": false,                   /* Enable experimental support for TC39 stage 3 draft decorators. */
+    "emitDecoratorMetadata": false,                    /* Emit design-type metadata for decorated declarations in source files. */
+
   }
 }
