--- a/FunctionalCsharp/FunctionalCsharp.Tests/FunctionalCsharp.Tests.csproj
+++ b/FunctionalCsharp/FunctionalCsharp.Tests/FunctionalCsharp.Tests.csproj
@@ -11,10 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="NUnit" Version="4.4.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
+
+        <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+        <PackageReference Include="OneOf" Version="3.0.271" />
+        <PackageReference Include="OneOf.SourceGenerator" Version="3.0.271" />
     </ItemGroup>
 </Project>
